# CPP_For_CV

./: .gitignore  README.md
00_FastSurferRunOnC#/: FastSurferOnC#.csproj  FastSurferOnC#.sln  Program.cs  README.md
01_BuildingEscape_UE5/Config/: DefaultEngine.ini  DefaultInput.ini
01_BuildingEscape_UE5/Content/: BP_DOOR.uasset  ESP_Chara.uasset  NewMap.umap  door-lock.uasset
02_GuessAWord/GaW, Source/: GaW_Includes.h  GaW_MainMenu.h  GaW_WordList.h
02_SlidingPuzzle_UE5/Source/: SPG_CPP.Target.cs
03_TextRestorer/: TEXT RESTORER Read Me.txt
03_Wordex_WinForms/WORDEX, Source/: WORDEX.sln  WORDEX.vcxproj  Wordex.vcxproj.filters  wdx_core.cpp  wdx_core.h
04_BuildingEscapeUE_5.0/: .gitignore  BuildingEscape.code-workspace  BuildingEscape.sln  BuildingEscape.uproject
04_Curves3D_DLL-OpenMP/Curves3D_Linux/: CMakeLists.txt
05_SlidingPuzzle (UE_5.0)/: SPG_CPP.uproject
06_VCF_Editor_Regex/: AAA.vcf  ARCHIVE.cpp  Contacts_Shortcut.lnk  CreateTables.sql  DBSettings.txt  DropTables.sql  OUTPUT_CARDS.json  OUTPUT_CARDS.vcf  OUTPUT_CARDS.xml  OUTPUT_CARDSvcf  TESTITTO.vcf  VCFE.sln  VCFE.vcxproj  ZZZ.vcf  c_func_test.c  output.json  output.xml  vcfe_code_dict.h  vcfe_data_containers.h  vcfe_data_containers.hpp  vcfe_db_settings.cpp  vcfe_db_settings.hpp  vcfe_decode_from_hex.c  vcfe_decode_from_hex.h  vcfe_deencode_funcs.c  vcfe_deencode_funcs.h  vcfe_encode_symbol.h  vcfe_encode_to_hex.c  vcfe_encode_to_hex.h  vcfe_json_maker.cpp  vcfe_json_maker.h  vcfe_main.cpp  vcfe_pgdb_handler.cpp  vcfe_pgdb_handler.hpp  vcfe_printer_functions.cpp  vcfe_printer_functions.h  vcfe_ptree_parser.cpp  vcfe_ptree_parser.hpp  vcfe_qt_json_parser.hpp  vcfe_regex_parsers.cpp  (+16 more)
07_DGMA_Task_UE5/: DGMATASK.sln  DGMATASK.uproject  README.md
07_Wordex_WinForms/: Wordex_ReadMe.txt
08_CppQuizParser_Linux/: CMakeLists.txt  README.md  main.cpp  settings.txt  site_parser  site_parser.cpp  site_parser.h  tasks.json
08_UnRePit (Lua, GTest, WinForms)/: UnRePit_Settings.lua
08_UnRePit (QT, Lua, GTest)/: UnRePit_ReadMe.txt
08_UnRepit (Lua, WinForms)/: UnRepit_Settings.luau
09_ULabSortStat/: labs_array_maker.h  labs_sort_runner.cpp  labs_sorting_functors.h  labs_utility_func.cpp
09_ULab_SortStat/: labs_array_maker.cpp  labs_main.cpp  labs_sort_runner.h  labs_sorting_functors.cpp  labs_table_printer.cpp  labs_table_printer.h  labs_utility_func.h  sort_stat.sln  sort_stat.vcxproj
10_PBFTask_LinuxSocket/: PBFTask.txt  pbf_task_client  pbf_task_client.cpp  pbf_task_server  pbf_task_server.cpp
11_Atlant_Task_UE5/: AtlantCPPTask.sln  AtlantCPPTask.uproject  Developer Unreal ТЕСТОВОЕ ЗАДАНИЕ.txt
12_EventMediator/: EventMediator.h  PropertyMediator.h  README.md  main.cpp
13_TGBotEventPlanner/: TGBot_BotManager.h  TGBot_SQLiteDBManager.h  TGBot_UiKeeper.h  TGBot_Utilities.h  Winux.cpp  telegram_bot.cpp
14_ConverterProject/: .gitignore  InstallDependencies.sh  Makefile  main.cpp  studytester.cpp
14_SQLWrapper/: .gitignore  Makefile
15_BlueprintParser/: .gitignore  BlueprintResult.h  BlueprintSource.txt  GeneralConvertPlan.md  GenerateListFile.sh  Makefile  main.cpp  merge_to_cpp.sh  remove_marked_lines.sh
16_SFML_Fireworks_Linux/: CMakeLists.txt  lsan_suppressions.txt  manual_build.txt  run.sh
16_SFML_Fireworks_Linux/src/: Delegates.h  leak_warning_suppression.h  main.cpp
16_SFML_Fireworks_Linux/src/Basics/: Consts.h  Counters.cpp  Counters.h  FrameTimer.h  GameState.h  InputProcessor.cpp  InputProcessor.h  RenderLoop.cpp  RenderLoop.h  UActiveView.cpp  UActiveView.h  Utility.cpp  Utility.h  WindowHolder.cpp  WindowHolder.h
16_SFML_Fireworks_Linux/src/Interfaces/: IDrawable.h  IGetDrawable.h  IInputConsumer.h  ILayoutItem.h  IResizable.h  IUpdatable.h
16_SFML_Fireworks_Linux/src/Projectiles/: AfterglowTrailComponent.h  GlowComponent.h  MovementComponent.h  ProjectileController.h
16_SFML_Fireworks_Linux/src/UI/: BottomLeftTickBoxController.h  Button.h  MainMenuController.h  StatsOverlay.h  UResizableCircle.h  UResizableRectangle.h  UResizableShape.h  UTickBox.h  UiItemState.h  UiText.h  VerticalLayout.h
17_AndroidApp_Randogen/: .gitignore  RandoGen Minimal Project.rar  RandoGen.rar  merge_folder_to_file.sh  settings.gradle.kts
17_AndroidApp_Randogen/app/src/main/cpp/CppTests/: CMakeLists.txt  SortedRollsMaker.test.cpp  SuccessChanceCounter.test.cpp  instruction.txt
3_TextRestorer/: TEXT_RESTORER.cpp
4_SlidingPuzzleGeneratorUE_5.0/: SPG_CppReadMe.txt
GKAdeptTask/: TaskDescription.txt
TEXT_RESTORER/: IO.txt  TEXT RESTORER Read Me.txt  TEXT_RESTORER.cpp
ULab_HTML&CSS/: FINAL_00.html  FINAL_03.html  FINAL_99.html  _TASK_.html
(+575 files in other folders)
